--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.12.3
 
 # copy the requirements.txt file into tmp directory
-COPY requirements.txt /tmp/requirements.txt
+COPY requirements-api.txt /tmp/requirements.txt
 
 # Upgrade pip and install requirements.txt
 RUN python -m pip install --no-cache-dir --upgrade pip &&\
@@ -10,11 +10,11 @@ RUN python -m pip install --no-cache-dir --upgrade pip &&\
 # Copy the entire project
 COPY . /app
 
-# Setup project workinh directory
+# Setup project working directory
 WORKDIR /app
 
 # Expose Port
-EXPOSE 8000
+EXPOSE 80
 
 # Run the appliaction
 CMD [ "uvicorn", "api:app", "--host", "0.0.0.0" ,"--port", "8000"]
